--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <version>5.4.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>23</version>
+        </dependency>
     </dependencies>
 
     <build>
