action & scoring log

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,41 +1,43 @@
-#name = PropertiesConfig
-#
-#
-#appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} [%t] %-5level: %msg%n
-#appender.console.type = Console
-#appender.console.name = consoleLogger
-#appender.console.layout.type = PatternLayout
-#
-#
-#appender.file.type = File
-#appender.file.name = fileLogger
-#appender.file.fileName = logs/application.log
-#appender.file.layout.type = PatternLayout
-#appender.file.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
-#
-#
-#
-#rootLogger.level = debug
-#rootLogger.appenderRef.stderr.ref = consoleLogger
-#rootLogger.appenderRef.consoleLogger.ref = consoleLogger
-
 name = PropertiesConfig
 
-
+# -----------------------
+# Console Appender
+# -----------------------
 appender.console.type = Console
 appender.console.name = consoleLogger
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{EEE, dd MMM yyyy HH:mm:ss} %-5level %logger{36} - %msg (at %M:%L)%n
+# Log level ???????????, logger name, message, method + line
+appender.console.layout.pattern = %-5level [%logger{36}] - %msg (at %M:%L)%n
 
+# -----------------------
+# File Appenders
+# -----------------------
+# 1. Application log
+appender.application.type = File
+appender.application.name = applicationLogger
+appender.application.fileName = logs/application.log
+appender.application.layout.type = PatternLayout
+appender.application.layout.pattern = %-5level [%logger{36}] - %msg (at %M:%L)%n
 
-appender.file.type = File
-appender.file.name = fileLogger
-appender.file.fileName = logs/application.log
-appender.file.layout.type = PatternLayout
-appender.file.layout.pattern = %d{EEE, dd MMM yyyy HH:mm:ss} %-5level %logger{36} - %msg (at %M:%L)%n
+# 2. Action log
+appender.action.type = File
+appender.action.name = actionLogger
+appender.action.fileName = logs/action.log
+appender.action.layout.type = PatternLayout
+appender.action.layout.pattern = %-5level [%logger{36}] - %msg (at %M:%L)%n
 
+# 3. Score log
+appender.score.type = File
+appender.score.name = scoreLogger
+appender.score.fileName = logs/score.log
+appender.score.layout.type = PatternLayout
+appender.score.layout.pattern = %-5level [%logger{36}] - %msg (at %M:%L)%n
 
+# -----------------------
+# Root Logger
+# -----------------------
 rootLogger.level = debug
 rootLogger.appenderRef.console.ref = consoleLogger
-rootLogger.appenderRef.file.ref = fileLogger
-
+rootLogger.appenderRef.application.ref = applicationLogger
+rootLogger.appenderRef.action.ref = actionLogger
+rootLogger.appenderRef.score.ref = scoreLogger
